first half done

--- a/src/index.html
+++ b/src/index.html
@@ -38,6 +38,8 @@
       </div>
     </div>
 
+    <div class="wrapper c"></div>
+
     <script src="js/main.js" type="module"></script>
   </body>
 </html>
