--- a/src/index.html
+++ b/src/index.html
@@ -15,31 +15,70 @@
   <body>
     <div class="flexbox">
       <div class="wrapper a">
-        <div class="block one">
+        <div class="block">
           <p>Bloc 1</p>
         </div>
-        <div class="block one">
+        <div class="block">
           <p>Bloc 2</p>
         </div>
-        <div class="block one">
+        <div class="block">
           <p>Bloc 3</p>
         </div>
       </div>
       <div class="wrapper b">
-        <div class="block two">
+        <div class="block">
           <p>Premier bloc</p>
         </div>
-        <div class="block two">
+        <div class="block">
           <p>Deuxième bloc</p>
         </div>
-        <div class="block two">
+        <div class="block">
           <p>Et le troisième bloc</p>
         </div>
       </div>
+
+      <div class="wrapper c">
+        <div class="block">
+          <p>Bloc 1</p>
+        </div>
+        <div class="block">
+          <p>Bloc 2</p>
+        </div>
+        <div class="block">
+          <p>Bloc 3</p>
+        </div>
+        <div class="block">
+          <p>Bloc 4</p>
+        </div>
+      </div>
+
+      <div class="wrapper d">
+        <div class="block">
+          <p>Premier bloc</p>
+        </div>
+        <div class="block">
+          <p>Deuxième bloc</p>
+        </div>
+        <div class="block">
+          <p>Et le troisième bloc</p>
+        </div>
+      </div>
+
+      <div class="wrapper e">
+        <div class="block">
+          <p>Bloc 1</p>
+        </div>
+        <div class="block">
+          <p>Bloc 2</p>
+        </div>
+        <div class="block">
+          <p>Bloc 3</p>
+        </div>
+        <div class="block">
+          <p>Bloc 4</p>
+        </div>
+      </div>
     </div>
-
-    <div class="wrapper c"></div>
-
     <script src="js/main.js" type="module"></script>
   </body>
 </html>
